# test-cool-packages

./: .gitignore  Dockerfile  README.md  pyproject.toml
cool_packages/apache_beam/: __init__.py  to_be_or_not_be.py
cool_packages/beanie/: docker-compose.yml
cool_packages/drawdata/: first_play.ipynb
cool_packages/lux/: cars.ipynb  covid_data.ipynb  playground.ipynb
drawdata/: first_play.ipynb
