[tool.poetry]
name = "test-cool-packages"
version = "0.1.0"
description = ""
authors = ["Kemal Diri <kemaldiri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "5.5.3"
jupyterlab = "3.0.14"
pandas = "1.2.4"
drawdata = "^0.2.0"
matplotlib = "^3.4.1"
lux = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
